Put all into one app

--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/tomato.png" />
+    <link rel="icon" type="image/x-icon" href="/monkey.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pomodoro - Monki</title>
+    <title>Monki Vanilla Projects</title>
   </head>
   <body>
-    
-    <app-header></app-header>
-    <app-timer></app-timer>
-    <app-footer></app-footer>
-
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
