--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <title>Monki Vanilla Projects</title>
   </head>
   <body>
-    <app-router data-routes='[
-      {"link": "/", "element": "<h1>Test</h1>"},
-      {"link": "/monkidoro", "element": "<app-monkidoro></app-monkidoro>"},
-      {"link": "/monki-drag-drop", "element": "<app-monki-drag-drop></app-monki-drag-drop>"},
-      {"link": "/monki-tips", "element": "<app-monki-tips></app-monki-tips>"}
-    ]'></app-router>
+    <app-router></app-router>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
